[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/Main/Main.gd" type="Script" id=1]
[ext_resource path="res://ui/Main/background_1280x720.jpg" type="Texture" id=2]
[ext_resource path="res://ui/Options/Options.tscn" type="PackedScene" id=3]
[ext_resource path="res://music/waiting.ogg" type="AudioStream" id=4]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 7

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "TankMania 2"
align = 1
valign = 1

[node name="MainButtons" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -234.0
margin_top = -260.0
margin_right = -40.0
margin_bottom = 260.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainButtons"]
margin_top = 120.0
margin_right = 194.0
margin_bottom = 400.0
size_flags_vertical = 4
custom_constants/separation = 20

[node name="PlayButton" type="Button" parent="MainButtons/VBoxContainer"]
margin_right = 194.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 40 )
text = "Play"

[node name="Online" type="Button" parent="MainButtons/VBoxContainer"]
margin_top = 60.0
margin_right = 194.0
margin_bottom = 100.0
rect_min_size = Vector2( 180, 40 )
text = "Online"

[node name="MultiplayerButton" type="Button" parent="MainButtons/VBoxContainer"]
margin_top = 120.0
margin_right = 194.0
margin_bottom = 160.0
rect_min_size = Vector2( 180, 40 )
text = "Multiplayer"

[node name="OptionButon" type="Button" parent="MainButtons/VBoxContainer"]
margin_top = 180.0
margin_right = 194.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 40 )
text = "Options"

[node name="ExitButton" type="Button" parent="MainButtons/VBoxContainer"]
margin_top = 240.0
margin_right = 194.0
margin_bottom = 280.0
rect_min_size = Vector2( 180, 40 )
text = "Exit"

[node name="Options" parent="." instance=ExtResource( 3 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="pressed" from="MainButtons/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MainButtons/VBoxContainer/Online" to="." method="_on_Online_pressed"]
[connection signal="pressed" from="MainButtons/VBoxContainer/MultiplayerButton" to="." method="_on_MultiplayerButton_pressed"]
[connection signal="pressed" from="MainButtons/VBoxContainer/OptionButon" to="." method="_on_OptionButon_pressed"]
[connection signal="pressed" from="MainButtons/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="exited" from="Options" to="." method="_on_Options_exited"]
[connection signal="hide" from="Options" to="." method="_on_Options_hide"]
